<resources>
    <string name="app_name">Calculator</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="mul" translatable="false">*</string>
    <string name="div" translatable="false">/</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="add" translatable="false">+</string>
    <string name="sub" translatable="false">-</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="leftBracket" translatable="false">(</string>
    <string name="rightBracket" translatable="false">)</string>
    <string name="_0" translatable="false">0</string>
    <string name="dot" translatable="false">.</string>
    <string name="clearAll" translatable="false">CA</string>
    <string name="clear" translatable="false">C</string>
    <string name="equal" translatable="false">=</string>
    <string name="zeroDivision">Zero division is forbidden</string>
    <string name="invalidExpression">Invalid expression</string>
    <string name="invalidOperator">Invalid operator</string>
    <string name="sqrt" translatable="false">sqrt</string>
    <string name="pow" translatable="false">^</string>
    <string name="sin" translatable="false">sin</string>
    <string name="cos" translatable="false">cos</string>
    <string name="mod" translatable="false">%</string>
    <string name="advancedCalculatorFAB">Advanced calculator floating button</string>
</resources>