<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/advancedKeyboardFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sin_btn"
            android:onClick="trigonometryClick"
            style="@style/AdvancedButton"
            android:text="@string/sin" />

        <Button
            android:id="@+id/cos_btn"
            android:onClick="trigonometryClick"
            style="@style/AdvancedButton"
            android:text="@string/cos" />

        <Button
            android:id="@+id/mod_btn"
            android:onClick="actionClick"
            style="@style/AdvancedButton"
            android:text="@string/mod" />
        <Button
            android:id="@+id/ctg_btn"
            android:onClick="actionClick"
            style="@style/AdvancedButton"
            android:text="@string/pow" />
    </TableRow>
</TableLayout>